employee is able to see rolled out items with sentiments.